After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 759986 - file deletion rate speed is wrong
file deletion rate speed is wrong
Status: RESOLVED FIXED
Product: nautilus
Classification: Core
Component: general
3.18.x
Other Linux
: Normal normal
: 3.18
Assigned To: Nautilus Maintainers
Nautilus Maintainers
: 759703 766529 (view as bug list)
Depends on:
Blocks:
 
 
Reported: 2015-12-30 01:44 UTC by Hussam Al-Tayeb
Modified: 2017-08-29 14:26 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
nautilus showing files deleted per second. (1.06 MB, image/png)
2015-12-30 01:44 UTC, Hussam Al-Tayeb
  Details
Patch for this problem, without any tests (1.10 KB, patch)
2016-03-17 16:12 UTC, Alex Shpilkin
needs-work Details | Review
Patch for this problem (v2) (1.11 KB, patch)
2016-03-17 16:18 UTC, Alex Shpilkin
needs-work Details | Review
Patch for this problem (v3) (1.91 KB, patch)
2016-03-18 11:48 UTC, Alex Shpilkin
needs-work Details | Review
Patch for this problem (v4) (1.76 KB, patch)
2016-03-18 12:30 UTC, Alex Shpilkin
accepted-commit_now Details | Review
file-operations: fix deletion rate (2.03 KB, patch)
2016-04-17 16:37 UTC, Neil Herald
committed Details | Review

Description Hussam Al-Tayeb 2015-12-30 01:44:05 UTC
Created attachment 318018 [details]
nautilus showing files deleted per second.

So after compiling libreoffice, I wanted to delete the source folder using nautilus which usually takes time.
Over 309 thousand files.
Nautilus was showing that it was deleting an average of 567billion files per second which is not accurate.
I have attached a screenshot.
Comment 1 Alex Shpilkin 2016-03-17 16:12:48 UTC
Created attachment 324197 [details] [review]
Patch for this problem, without any tests
Comment 2 Alex Shpilkin 2016-03-17 16:12:59 UTC
The offending code is at libnautilus-private/nautilus-file-operations.c,
line 1573: the argument to a %d format is

    (int) transfer_rate + 0.5);

instead of

    (int)(transfer_rate + 0.5));

Related: on the following line, the concatenation results in a space missing
between the two concatenated parts — can also be seen on the screenshot.

I’m attaching the (trivial) patch as I see it, but without any tests.
Comment 3 Alex Shpilkin 2016-03-17 16:18:03 UTC
Created attachment 324198 [details] [review]
Patch for this problem (v2)

Sorry, the patch I posted was in reverse. Here’s the proper one.
Comment 4 Carlos Soriano 2016-03-18 08:19:13 UTC
Review of attachment 324198 [details] [review]:

Good catch! Thanks!
Do you have commit rights?
Comment 5 Alex Shpilkin 2016-03-18 08:25:31 UTC
No, I don’t. (Frankly, I’ve never succeeded in setting up a GNOME build environment either.)
Comment 6 Carlos Soriano 2016-03-18 08:31:39 UTC
(In reply to Alex Shpilkin from comment #5)
> No, I don’t.

Ok I will push them for you.

> (Frankly, I’ve never succeeded in setting up a GNOME build
> environment either.)

We have to fix that :) Did you read wiki.gnome.org/Newcomers? should guide you to set up everything in an easy way.
Comment 7 Carlos Soriano 2016-03-18 09:14:11 UTC
Review of attachment 324198 [details] [review]:

Actually the patch doesn't apply to master, but it should be easy to make the required changes. Would you like to?
Comment 8 Alex Shpilkin 2016-03-18 11:48:37 UTC
Created attachment 324254 [details] [review]
Patch for this problem (v3)

OK, I was too lazy previously to format it to the Git conventions, but here it is now, against git.gnome.org's master. Feel free to edit the description as needed.
Comment 9 Carlos Soriano 2016-03-18 11:57:53 UTC
Review of attachment 324254 [details] [review]:

The commit message lacks the file that is being modified in the title.
Also, it says: " should probably not be concatenated from two different strings"
but it's indeed needed, precisely for translations, since we need to separate plural and singular.
Comment 10 Alex Shpilkin 2016-03-18 12:30:54 UTC
Created attachment 324262 [details] [review]
Patch for this problem (v4)

Right, sorry for the e-mail noise.
Comment 11 Carlos Soriano 2016-03-18 13:45:03 UTC
Review of attachment 324262 [details] [review]:

This looks better now!
However I didn't realize before, this patch does two changes in one, it should do one change at a time, if not get's confusing why we needed a change on a line which is no related to the original bug report.
Let's not get stuck on that tho. If you want to do it properly, please go on, if not I can commit as it is this time :)
Comment 12 Hussam Al-Tayeb 2016-04-14 12:13:09 UTC
The file deletion rate speed is still wrong for me. But now instead of a very large negative number, it is a very large positive number.

Trying to delete 165,000 files says some very large number like 983033343 per second which is incorrect because it takes a few minutes.

Nautilus built from https://git.gnome.org/browse/nautilus/log/?h=gnome-3-20 so it has the fix according to the logs.
Comment 13 Neil Herald 2016-04-17 16:36:57 UTC
Same here. Alex - your fix is good, you just need to apply it to another line. Hope you don't mind me jumping on this one, I spotted it when I was looking into something else
Comment 14 Neil Herald 2016-04-17 16:37:14 UTC
Created attachment 326202 [details] [review]
file-operations: fix deletion rate

The deletion rate shown to the user is wrong, it's coming out as a
massive number. An earlier fix corrected the deletion rate used to
determine if the message should use the plural. This fix is to make the
same change to the value shown to the user.
Comment 15 Alex Shpilkin 2016-04-17 17:55:18 UTC
(In reply to Neil Herald from comment #13)
> Hope you don't mind me jumping on this one

Sure I don’t. Sorry for the noise for (what should have been) a one-line fix. (I should have figured out why I don’t seem to be able to bootstrap git jhbuild on my platform [x86-64 Arch], but I was too lazy and thus couldn’t actually rebuild Nautilus. :( )
Comment 16 Hussam Al-Tayeb 2016-04-18 00:39:34 UTC
(In reply to Neil Herald from comment #14)
> Created attachment 326202 [details] [review] [review]
> file-operations: fix deletion rate
> 
> The deletion rate shown to the user is wrong, it's coming out as a
> massive number. An earlier fix corrected the deletion rate used to
> determine if the message should use the plural. This fix is to make the
> same change to the value shown to the user.

This fixes it. Thank you!
Comment 17 Carlos Soriano 2016-04-18 21:11:35 UTC
Review of attachment 326202 [details] [review]:

Ugh I overkilled it previously. This looks good, thanks!
Comment 18 Carlos Soriano 2016-04-22 13:57:16 UTC
Attachment 326202 [details] pushed as fe0a16a - file-operations: fix deletion rate
Comment 19 António Fernandes 2017-08-28 08:36:22 UTC
*** Bug 759703 has been marked as a duplicate of this bug. ***
Comment 20 António Fernandes 2017-08-29 14:26:58 UTC
*** Bug 766529 has been marked as a duplicate of this bug. ***